# yo-html

./: Cargo.toml  LICENSE.Apache-2.0  LICENSE.MIT  README.md
examples/: basic.rs  groceries.rs  yo_web_framework_example.rs
src/: generate_builder.rs  lib.rs  parser.rs
tests/: simple_web_framework.rs
tests/simple_web_framework/: attribute-fail.rs  attribute-fail.stderr  basic-pass.rs  basic_web_framework.rs  element-fail.rs  element-fail.stderr
