[package]
name = "yo-html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
quote = "1"

[dev-dependencies]
implicit-clone = "0.4.9"
trybuild = "1"
rustversion = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Element", "Document", "Window", "HtmlElement", "Text"] }
xtask-wasm = { version = "0.2", features = ["run-example"] }
