[package]
name = "yo-html"
version = "0.1.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
autoexamples = false
rust-version = "1.76"
description = "JSX-like macro similar to what you can find in React or Yew but without framework nor trait."
repository = "https://github.com/cecton/yo-html"
homepage = "https://github.com/cecton/yo-html"
documentation = "https://docs.rs/yo-html"
readme = "README.md"
keywords = ["html", "jsx", "react", "proc-macro", "frameworkless"]
categories = ["web-programming"]

[lib]
proc-macro = true

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "groceries"
path = "examples/groceries.rs"

[dependencies]
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
quote = "1"

[dev-dependencies]
implicit-clone = "0.4.9"
trybuild = "1"
rustversion = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Element", "Document", "Window", "HtmlElement", "Text", "DocumentFragment", "Event", "HtmlInputElement"] }
xtask-wasm = { version = "0.2", features = ["run-example"] }
